add startbootstrap blog template

--- a/index.jade
+++ b/index.jade
@@ -8,9 +8,9 @@ html(lang="en")
     h1 Jade - node template engine
     #container.col
       if youAreUsingJade
-        p Yxng
+        p you are using jade
       else
-        p ssss!
+        p no jade!
       p.
         dff
     
