--- a/css/app.css
+++ b/css/app.css
@@ -10,6 +10,24 @@ footer {
 }
 
 /* line 12, ../sass/app.scss */
+#loading-indicator {
+  position: absolute;
+  left: -2px;
+  top: 16px;
+}
+
+@media (min-width: 768px) {
+  /* line 18, ../sass/app.scss */
+  #loading-indicator {
+    left: -20px;
+  }
+}
+/* line 24, ../sass/app.scss */
+.navbar-header {
+  position: relative;
+}
+
+/* line 28, ../sass/app.scss */
 ul.posts {
   list-style: none;
   margin: 0;
