--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,8 @@ html(lang="en")
 
     title= "Oded Sagir Blog"    
     link(href="bower_components/bootstrap/dist/css/bootstrap.css", rel="stylesheet")
+    //http://bootswatch.com/amelia/
+    //link(href="css/bootstrap_themes/amelia.css", rel="stylesheet")
     link(href="css/app.css", rel="stylesheet")
   body
     
