--- a/templates/post.dust
+++ b/templates/post.dust
@@ -1,5 +1,5 @@
 <!-- blog entry -->
-<h1><a href="/posts/{id}">{title}</a></h1>
+<h1><a href="#posts/{id}">{title}</a></h1>
 <p class="lead">by <a href="#">{author}</a></p>
 <hr>
 <p class="date"><span class="glyphicon glyphicon-time"></span> Posted on {date}</p>
@@ -8,7 +8,7 @@
 <hr>
 <p>{preview}</p>
 {?summaryView}
-<a class="btn btn-primary" href="posts/{id}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+<a class="btn btn-primary" href="#posts/{id}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 {:else}
 <p>{content}</p>
 {/summaryView}
