--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,9 +1,8 @@
 <ul class="posts">
-
 </ul>
 
- <!-- pager -->
+<!-- pager -->
 <ul class="pager">
-    <li class="previous"><a href="#next">&larr; Older</a></li>
-    <li class="next"><a href="#prev">Newer &rarr;</a></li>
+    <li class="previous"><a href="javascript:void(0)" data-bypass>&larr; Older</a></li>
+    <li class="next"><a href="javascript:void(0)" data-bypass>Newer &rarr;</a></li>
 </ul>
