--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,14 @@
 doctype html
-html
+html(lang="en")
   head
-    title= 'Oded Sagir'
-    meta(charset='utf-8')
-    link(rel='stylesheet', href='/css/bootstrap.css')
+    meta(charset="utf-8")
+    meta(name="viewport",content="width=device-width, initial-scale=1.0")
+
+    title= "Oded Sagir Blog"    
+    link(href="/bower_components/bootstrap/dist/css/bootstrap.css", rel="stylesheet")
+    //http://bootswatch.com/amelia/
+    //link(href="/css/bootstrap_themes/amelia.css", rel="stylesheet")
+    link(href="/css/app.css", rel="stylesheet")
   body
     .navbar.navbar-fixed-top
       .navbar-inner
