parse html to jade

--- a/views/includes/pagination.jade
+++ b/views/includes/pagination.jade
@@ -9,3 +9,8 @@ ul.pagination
       li
         a(href=pageURL(i)) #{i}
     - i++;
+ul.pager
+    li.previous(href="javascript:void(0)", data-bypass="&larr; Older")
+    li.next(href="javascript:void(0)", data-bypass="Newer &rarr;")
+
+
