--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,23 +10,67 @@ html(lang="en")
     //link(href="/css/bootstrap_themes/amelia.css", rel="stylesheet")
     link(href="/css/app.css", rel="stylesheet")
   body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container
-          a.brand(href='/') A Coder Blog
-    .wrap
+
+    nav#navbar.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
       .container
+        .navbar-header
+          button.navbar-toggle(type="button",data-toggle="collapse",data-target=".navbar-ex1-collapse")
+            span.sr-only="Toggle navigation"
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          img#loading-indicator(src="/img/ajax-loader-333-222-arrows.gif", style="display:none")
+          a.navbar-brand(href="/")="A Blog"
+
+        // Collect the nav links, forms, and other content for toggling
+        .collapse.navbar-collapse.navbar-ex1-collapse
+          ul.nav.navbar-nav
+            li
+              a(href="#about")="About"
+            li
+              a(href="#services")="Services"
+            li
+              a(href="#contact")="Contact"
+            li
+              a(href="#poet")="Poet"
+    .container
+      #main.row
+        .col-lg-8
+          block content
+        .col-lg-4
+          .well
+            h4="Blog Search"
+            .input-group
+                input.form-control(type="text")
+                span.input-group-btn
+                  button.btn.btn-default(type="button")
+                    span.glyphicon.glyphicon-search
+          .well
+            h4="Popular Blog Categories"
+            .row
+              .col-lg-6
+                ul.list-unstyled
+                  li.nav-header categories
+                  - each cat in getCategories()
+                    li
+                      a(href=categoryURL(cat)) #{cat}
+              .col-lg-6
+                ul.list-unstyled
+                  li.nav-header tags
+                  - each tag in getTags()
+                    li
+                      a(href=tagURL(tag)) #{tag}
+          .well
+            h4="Side Widget Well"
+            p= "Bootstrap's default wells work great for side widgets! What is a widget anyways...?"
+      hr
+      footer
         .row
-          .span8
-            block content
-          .span4
-            .well.sidebar-nav
-              ul.nav.nav-list
-                li.nav-header categories
-                - each cat in getCategories()
-                  li
-                    a(href=categoryURL(cat)) #{cat}
-                li.nav-header tags
-                - each tag in getTags()
-                  li
-                    a(href=tagURL(tag)) #{tag}
+          .col-lg-12
+            p="Copyright &copy; Company 2013"
+
+    
+    script(type="text/javascript").
+      var require = { baseUrl: "./../" };
+    script(type="text/javascript", data-main="/js/app.js", src="/bower_components/requirejs/require.js")
+   
